GNOME Bugzilla – Bug 771786
wayland-session: don't start new session with stale session env vars
Last modified: 2016-09-21 19:58:37 UTC
commit 448134d3cdbc54e5359ea33d387993b0defdaefa changed gdm to import the session from systemd --user. Unfortunately, it broke log in after log out. The problem is, certain session specific environment variables from the previous session were getting leaked into the new session. This commit wipes the ones causing the most problems on the GDM side, but gnome-session should also probably purge them from the systemd --user environment when it exits.
Created attachment 336029 [details] [review] wayland-session: don't start new session with stale session env vars
Attachment 336029 [details] pushed as 3d2aa55 - wayland-session: don't start new session with stale session env vars